ingress/ingress.yaml
##Manages external access to the cluster
##Ingress only supports HTTP and HTTPS. Other protocols may be exported using NodePorts an LoadBalancers
##IN order for Ingress to work, you must provide an IngressController such as ingress-nginx

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    name: test-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: test
            port: 
              number: 8080

##About paths:
#Most common are Prefix and Exact. For the complet set of examples see https://kubernetes.io/docs/concepts/services-networking/ingress/ although it's very intuitive actually
##If more than one path matches, preference will be given to te Exact route, over the Prefix

##About hosts:
#host can accept wildcards, like *.bar.com
  - host: "*.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: test
            port: 
              number: 8080
